test edit openapi hooks
