# api/src/controller/swagger.rs
@@ -17,7 +17,7 @@ use utoipa_swagger_ui::SwaggerUi;
 
 #[derive(OpenApi)]
 #[openapi(paths(
-    get_health,
+    // get_health,
     get_bibles,
     get_bible_books,
     get_bible_chapters,
